Closed Bug 1415672 Opened 8 years ago Closed 8 years ago

When typing a tweet text being typed blinks [with retained display-list]

Categories

(Core :: Web Painting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: automatedtester, Assigned: mattwoodrow)

References

Details

Attachments

(2 files)

When typing a tweet into twitter.com the text being typed blinks constantly while typing and then sometimes it disappears. STR: 1) Go to https://twitter.com 2) Login 3) Click tweet button (this may disappear which is a bug in itself) 4) Type in the text area a tweet and marvel at the blinking that occurs. Application Basics ------------------ Name: Firefox Version: 58.0a1 Build ID: 20171108110838 Update Channel: nightly User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:58.0) Gecko/20100101 Firefox/58.0 OS: Darwin 16.7.0 Multiprocess Windows: 1/1 (Enabled by default) Web Content Processes: 4/4 Stylo: content = true (enabled by default), chrome = false (disabled by default) Google Key: Found Mozilla Location Service Key: Found Safe Mode: false Crash Reports for the Last 3 Days --------------------------------- All Crash Reports Nightly Features ---------------- Name: Activity Stream Version: 2017.11.03.1438-bf427ddd ID: activity-stream@mozilla.org Name: Application Update Service Helper Version: 2.0 ID: aushelper@mozilla.org Name: Firefox Screenshots Version: 19.2.0 ID: screenshots@mozilla.org Name: FlyWeb Version: 1.0.0 ID: flyweb@mozilla.org Name: Follow-on Search Telemetry Version: 0.9.6 ID: followonsearch@mozilla.com Name: Form Autofill Version: 1.0 ID: formautofill@mozilla.org Name: Photon onboarding Version: 1.0 ID: onboarding@mozilla.org Name: Pocket Version: 1.0.5 ID: firefox@getpocket.com Name: Presentation Version: 1.0.0 ID: presentation@mozilla.org Name: Shield Recipe Client Version: 76.1 ID: shield-recipe-client@mozilla.org Name: Web Compat Version: 1.1 ID: webcompat@mozilla.org Name: WebCompat Reporter Version: 1.0.0 ID: webcompat-reporter@mozilla.org Extensions ---------- Name: AdBlock Version: 3.6.0 Enabled: true ID: jid1-NIfFY2CA8fy1tg@jetpack Name: bitwarden - Free Password Manager Version: 1.20.1 Enabled: true ID: {446900e4-71c2-419f-a6a7-df9c091e268b} Name: DuckDuckGo Plus Version: 2017.11.6 Enabled: true ID: jid1-ZAdIEUB7XOzOJw@jetpack Name: Firefox Notes Version: 1.8.0 Enabled: true ID: notes@mozilla.com Name: Gecko Profiler Version: 0.17 Enabled: true ID: geckoprofiler@mozilla.com Name: Make Trump Tweets Eight Again Version: 1.1.2 Enabled: true ID: trump_tweets@addon.com Name: Test Pilot Version: 2.0.6-dev-6bd8f7a Enabled: true ID: @testpilot-addon Name: uBlock Origin Version: 1.14.16 Enabled: true ID: uBlock0@raymondhill.net Name: Activity Stream Version: 1.14.3 Enabled: false ID: @activity-streams Name: Buffer Version: 3.3.25 Enabled: false ID: jid1-zUyU7TGKwejAyA@jetpack Name: Evernote Web Clipper Version: 6.13 Enabled: false ID: {E0B8C461-F8FB-49b4-8373-FE32E9252800} Name: Github Tweaks for Bugzilla Version: 1.50.1-signed.1-signed Enabled: false ID: jid0-AWShpy08txla2QGDYvv5bed4sjs@jetpack Name: Github+Travis Version: 0.2.6.1-signed.1-signed Enabled: false ID: githubtravis@theautomatedtester.co.uk Name: HTTPS Everywhere Version: 2017.10.30 Enabled: false ID: https-everywhere@eff.org Name: LastPass: Free Password Manager Version: 4.1.54 Enabled: false ID: support@lastpass.com Name: Noments Version: 0.1.0 Enabled: false ID: @noments Name: Tab Center Version: 1.36.0 Enabled: false ID: tabcentertest1@mozilla.com Name: Tilt Version: 1.0.1.1-signed.1-signed Enabled: false ID: tilt@mozilla.com Name: User-Agent Switcher Version: 0.1.8 Enabled: false ID: jid1-kyxEAcWua7BEKq@jetpack Name: Whimsy Version: 3.0.1 Enabled: false ID: jid1-6mUPixNFCjAgkg@jetpack Graphics -------- Features Compositing: OpenGL Asynchronous Pan/Zoom: wheel input enabled; scrollbar drag enabled; keyboard enabled; autoscroll enabled WebGL 1 Driver WSI Info: CGL WebGL 1 Driver Renderer: Intel Inc. -- Intel(R) Iris(TM) Graphics 6100 WebGL 1 Driver Version: 4.1 INTEL-10.25.17 WebGL 1 Driver Extensions: GL_ARB_blend_func_extended GL_ARB_draw_buffers_blend GL_ARB_draw_indirect GL_ARB_ES2_compatibility GL_ARB_explicit_attrib_location GL_ARB_gpu_shader_fp64 GL_ARB_gpu_shader5 GL_ARB_instanced_arrays GL_ARB_internalformat_query GL_ARB_occlusion_query2 GL_ARB_sample_shading GL_ARB_sampler_objects GL_ARB_separate_shader_objects GL_ARB_shader_bit_encoding GL_ARB_shader_subroutine GL_ARB_shading_language_include GL_ARB_tessellation_shader GL_ARB_texture_buffer_object_rgb32 GL_ARB_texture_cube_map_array GL_ARB_texture_gather GL_ARB_texture_query_lod GL_ARB_texture_rgb10_a2ui GL_ARB_texture_storage GL_ARB_texture_swizzle GL_ARB_timer_query GL_ARB_transform_feedback2 GL_ARB_transform_feedback3 GL_ARB_vertex_attrib_64bit GL_ARB_vertex_type_2_10_10_10_rev GL_ARB_viewport_array GL_EXT_debug_label GL_EXT_debug_marker GL_EXT_framebuffer_multisample_blit_scaled GL_EXT_texture_compression_s3tc GL_EXT_texture_filter_anisotropic GL_EXT_texture_sRGB_decode GL_APPLE_client_storage GL_APPLE_container_object_shareable GL_APPLE_flush_render GL_APPLE_object_purgeable GL_APPLE_rgb_422 GL_APPLE_row_bytes GL_APPLE_texture_range GL_ATI_texture_mirror_once GL_NV_texture_barrier WebGL 1 Extensions: ANGLE_instanced_arrays EXT_blend_minmax EXT_color_buffer_half_float EXT_frag_depth EXT_sRGB EXT_shader_texture_lod EXT_texture_filter_anisotropic EXT_disjoint_timer_query OES_element_index_uint OES_standard_derivatives OES_texture_float OES_texture_float_linear OES_texture_half_float OES_texture_half_float_linear OES_vertex_array_object WEBGL_color_buffer_float WEBGL_compressed_texture_s3tc WEBGL_compressed_texture_s3tc_srgb WEBGL_debug_renderer_info WEBGL_debug_shaders WEBGL_depth_texture WEBGL_draw_buffers WEBGL_lose_context WebGL 2 Driver WSI Info: CGL WebGL 2 Driver Renderer: Intel Inc. -- Intel(R) Iris(TM) Graphics 6100 WebGL 2 Driver Version: 4.1 INTEL-10.25.17 WebGL 2 Driver Extensions: GL_ARB_blend_func_extended GL_ARB_draw_buffers_blend GL_ARB_draw_indirect GL_ARB_ES2_compatibility GL_ARB_explicit_attrib_location GL_ARB_gpu_shader_fp64 GL_ARB_gpu_shader5 GL_ARB_instanced_arrays GL_ARB_internalformat_query GL_ARB_occlusion_query2 GL_ARB_sample_shading GL_ARB_sampler_objects GL_ARB_separate_shader_objects GL_ARB_shader_bit_encoding GL_ARB_shader_subroutine GL_ARB_shading_language_include GL_ARB_tessellation_shader GL_ARB_texture_buffer_object_rgb32 GL_ARB_texture_cube_map_array GL_ARB_texture_gather GL_ARB_texture_query_lod GL_ARB_texture_rgb10_a2ui GL_ARB_texture_storage GL_ARB_texture_swizzle GL_ARB_timer_query GL_ARB_transform_feedback2 GL_ARB_transform_feedback3 GL_ARB_vertex_attrib_64bit GL_ARB_vertex_type_2_10_10_10_rev GL_ARB_viewport_array GL_EXT_debug_label GL_EXT_debug_marker GL_EXT_framebuffer_multisample_blit_scaled GL_EXT_texture_compression_s3tc GL_EXT_texture_filter_anisotropic GL_EXT_texture_sRGB_decode GL_APPLE_client_storage GL_APPLE_container_object_shareable GL_APPLE_flush_render GL_APPLE_object_purgeable GL_APPLE_rgb_422 GL_APPLE_row_bytes GL_APPLE_texture_range GL_ATI_texture_mirror_once GL_NV_texture_barrier WebGL 2 Extensions: EXT_color_buffer_float EXT_texture_filter_anisotropic EXT_disjoint_timer_query OES_texture_float_linear WEBGL_compressed_texture_s3tc WEBGL_compressed_texture_s3tc_srgb WEBGL_debug_renderer_info WEBGL_debug_shaders WEBGL_lose_context GPU #1 Active: Yes Vendor ID: 0x8086 Device ID: 0x162b Diagnostics AzureCanvasAccelerated: 1 AzureCanvasBackend: skia AzureContentBackend: skia AzureFallbackCanvasBackend: none TileHeight: 1024 TileWidth: 1024 Decision Log WEBRENDER: opt-in by default: WebRender is an opt-in feature OMTP: disabled by default: Disabled by default blocked by runtime: OMTP does not yet support tiling Media ----- Audio Backend: audiounit Max Channels: 2 Preferred Channel Layout: stereo Preferred Sample Rate: 44100 Output Devices Name: Group Internal Speakers: AppleHDAEngineOutput:1B,0,1,1:0 Input Devices Name: Group Internal Microphone: AppleHDAEngineInput:1B,0,1,0:1 Important Modified Preferences ------------------------------ accessibility.lastLoadDate: 1488199598 accessibility.typeaheadfind.flashBar: 0 browser.cache.disk.capacity: 358400 browser.cache.disk.filesystem_reported: 1 browser.cache.disk.hashstats_reported: 1 browser.cache.disk.smart_size.first_run: false browser.cache.disk.smart_size.use_old_max: false browser.cache.frecency_experiment: 1 browser.places.smartBookmarksVersion: 8 browser.search.useDBForOrder: true browser.sessionstore.upgradeBackup.latestBuildID: 20171108110838 browser.startup.homepage_override.buildID: 20171108110838 browser.startup.homepage_override.mstone: 58.0a1 browser.tabs.animate: false browser.tabs.crashReporting.includeURL: true browser.urlbar.searchSuggestionsChoice: true browser.urlbar.usepreloadedtopurls.enabled: false browser.urlbar.userMadeSearchSuggestionsChoice: true dom.apps.lastUpdate.buildID: 20160725030248 dom.apps.lastUpdate.mstone: 50.0a1 dom.apps.reset-permissions: true dom.forms.autocomplete.formautofill: true dom.mozApps.used: true dom.mozTCPSocket.enabled: true dom.push.userAgentID: 5682c073c54e4e8988f1ab08dbbc60fe extensions.lastAppVersion: 58.0a1 font.internaluseonly.changed: true font.language.group: x-western gfx.blacklist.direct2d.failureid: FEATURE_FAILURE_DL_BLACKLIST_g984 gfx.blacklist.hardwarevideodecoding.failureid: FEATURE_FAILURE_DL_BLACKLIST_g1208 gfx.crash-guard.glcontext.appVersion: 43.0a1 gfx.crash-guard.glcontext.deviceID: 0x162b gfx.crash-guard.status.glcontext: 2 javascript.options.asyncstack: false layout.display-list.retain: true media.benchmark.vp9.fps: 93 media.benchmark.vp9.versioncheck: 2 media.gmp-gmpopenh264.abi: x86_64-gcc3 media.gmp-gmpopenh264.lastUpdate: 1508528882 media.gmp-gmpopenh264.version: 1.7.1 media.gmp-manager.buildID: 20171108110838 media.gmp-manager.lastCheck: 1510151838 media.gmp-widevinecdm.abi: x86_64-gcc3 media.gmp-widevinecdm.lastUpdate: 1504521054 media.gmp-widevinecdm.version: 1.4.8.1008 media.gmp.storage.version.observed: 1 media.webrtc.debug.log_file: /var/folders/7n/2f615rtj42l0ppz5jg_nch0c0000gp/T/WebRTC.log network.cookie.prefsMigrated: true network.dns.disablePrefetch: true network.http.speculative-parallel-limit: 0 network.predictor.cleaned-up: true network.predictor.enabled: false network.prefetch-next: false places.database.lastMaintenance: 1509745652 places.favicons.optimizeToDimension: 64 places.history.expiration.transient_current_max_pages: 143641 plugin.disable_full_page_plugin_for_types: application/pdf plugin.importedState: true print.printer__.print_bgcolor: false print.printer__.print_bgimages: false print.printer__.print_duplex: -437918235 print.printer__.print_edge_bottom: 0 print.printer__.print_edge_left: 0 print.printer__.print_edge_right: 0 print.printer__.print_edge_top: 0 print.printer__.print_evenpages: true print.printer__.print_footercenter: print.printer__.print_footerleft: &PT print.printer__.print_footerright: &D print.printer__.print_headercenter: print.printer__.print_headerleft: &T print.printer__.print_headerright: &U print.printer__.print_in_color: true print.printer__.print_margin_bottom: 0.5 print.printer__.print_margin_left: 0.5 print.printer__.print_margin_right: 0.5 print.printer__.print_margin_top: 0.5 print.printer__.print_oddpages: true print.printer__.print_orientation: 0 print.printer__.print_page_delay: 50 print.printer__.print_paper_data: 0 print.printer__.print_paper_height: 11.00 print.printer__.print_paper_name: na-letter print.printer__.print_paper_size_unit: 0 print.printer__.print_paper_width: 8.50 print.printer__.print_resolution: -437918235 print.printer__.print_reversed: false print.printer__.print_scaling: 1.00 print.printer__.print_shrink_to_fit: true print.printer__.print_to_file: false print.printer__.print_unwriteable_margin_bottom: 56 print.printer__.print_unwriteable_margin_left: 25 print.printer__.print_unwriteable_margin_right: 25 print.printer__.print_unwriteable_margin_top: 25 print.printer_HP_LaserJet_CP_1025nw_2.print_bgcolor: false print.printer_HP_LaserJet_CP_1025nw_2.print_bgimages: false print.printer_HP_LaserJet_CP_1025nw_2.print_duplex: -437918235 print.printer_HP_LaserJet_CP_1025nw_2.print_edge_bottom: 0 print.printer_HP_LaserJet_CP_1025nw_2.print_edge_left: 0 print.printer_HP_LaserJet_CP_1025nw_2.print_edge_right: 0 print.printer_HP_LaserJet_CP_1025nw_2.print_edge_top: 0 print.printer_HP_LaserJet_CP_1025nw_2.print_evenpages: true print.printer_HP_LaserJet_CP_1025nw_2.print_footercenter: print.printer_HP_LaserJet_CP_1025nw_2.print_footerleft: &PT print.printer_HP_LaserJet_CP_1025nw_2.print_footerright: &D print.printer_HP_LaserJet_CP_1025nw_2.print_headercenter: print.printer_HP_LaserJet_CP_1025nw_2.print_headerleft: &T print.printer_HP_LaserJet_CP_1025nw_2.print_headerright: &U print.printer_HP_LaserJet_CP_1025nw_2.print_in_color: true print.printer_HP_LaserJet_CP_1025nw_2.print_margin_bottom: 0.5 print.printer_HP_LaserJet_CP_1025nw_2.print_margin_left: 0.5 print.printer_HP_LaserJet_CP_1025nw_2.print_margin_right: 0.5 print.printer_HP_LaserJet_CP_1025nw_2.print_margin_top: 0.5 print.printer_HP_LaserJet_CP_1025nw_2.print_oddpages: true print.printer_HP_LaserJet_CP_1025nw_2.print_orientation: 0 print.printer_HP_LaserJet_CP_1025nw_2.print_page_delay: 50 print.printer_HP_LaserJet_CP_1025nw_2.print_paper_data: 0 print.printer_HP_LaserJet_CP_1025nw_2.print_paper_height: 11.00 print.printer_HP_LaserJet_CP_1025nw_2.print_paper_name: na-letter print.printer_HP_LaserJet_CP_1025nw_2.print_paper_size_unit: 0 print.printer_HP_LaserJet_CP_1025nw_2.print_paper_width: 8.50 print.printer_HP_LaserJet_CP_1025nw_2.print_resolution: -437918235 print.printer_HP_LaserJet_CP_1025nw_2.print_reversed: false print.printer_HP_LaserJet_CP_1025nw_2.print_scaling: 1.00 print.printer_HP_LaserJet_CP_1025nw_2.print_shrink_to_fit: true print.printer_HP_LaserJet_CP_1025nw_2.print_to_file: false print.printer_HP_LaserJet_CP_1025nw_2.print_unwriteable_margin_bottom: 16 print.printer_HP_LaserJet_CP_1025nw_2.print_unwriteable_margin_left: 16 print.printer_HP_LaserJet_CP_1025nw_2.print_unwriteable_margin_right: 16 print.printer_HP_LaserJet_CP_1025nw_2.print_unwriteable_margin_top: 16 print.printer_HP_Photosmart_B110_series.print_bgcolor: false print.printer_HP_Photosmart_B110_series.print_bgimages: false print.printer_HP_Photosmart_B110_series.print_duplex: -437918235 print.printer_HP_Photosmart_B110_series.print_edge_bottom: 0 print.printer_HP_Photosmart_B110_series.print_edge_left: 0 print.printer_HP_Photosmart_B110_series.print_edge_right: 0 print.printer_HP_Photosmart_B110_series.print_edge_top: 0 print.printer_HP_Photosmart_B110_series.print_evenpages: true print.printer_HP_Photosmart_B110_series.print_footercenter: print.printer_HP_Photosmart_B110_series.print_footerleft: &PT print.printer_HP_Photosmart_B110_series.print_footerright: &D print.printer_HP_Photosmart_B110_series.print_headercenter: print.printer_HP_Photosmart_B110_series.print_headerleft: &T print.printer_HP_Photosmart_B110_series.print_headerright: &U print.printer_HP_Photosmart_B110_series.print_in_color: true print.printer_HP_Photosmart_B110_series.print_margin_bottom: 0.5 print.printer_HP_Photosmart_B110_series.print_margin_left: 0.5 print.printer_HP_Photosmart_B110_series.print_margin_right: 0.5 print.printer_HP_Photosmart_B110_series.print_margin_top: 0.5 print.printer_HP_Photosmart_B110_series.print_oddpages: true print.printer_HP_Photosmart_B110_series.print_orientation: 0 print.printer_HP_Photosmart_B110_series.print_page_delay: 50 print.printer_HP_Photosmart_B110_series.print_paper_data: 0 print.printer_HP_Photosmart_B110_series.print_paper_height: 11.00 print.printer_HP_Photosmart_B110_series.print_paper_name: na-letter print.printer_HP_Photosmart_B110_series.print_paper_size_type: 1 print.printer_HP_Photosmart_B110_series.print_paper_size_unit: 0 print.printer_HP_Photosmart_B110_series.print_paper_width: 8.50 print.printer_HP_Photosmart_B110_series.print_resolution: -437918235 print.printer_HP_Photosmart_B110_series.print_reversed: false print.printer_HP_Photosmart_B110_series.print_scaling: 1.00 print.printer_HP_Photosmart_B110_series.print_shrink_to_fit: true print.printer_HP_Photosmart_B110_series.print_to_file: false print.printer_HP_Photosmart_B110_series.print_unwriteable_margin_bottom: 13 print.printer_HP_Photosmart_B110_series.print_unwriteable_margin_left: 13 print.printer_HP_Photosmart_B110_series.print_unwriteable_margin_right: 13 print.printer_HP_Photosmart_B110_series.print_unwriteable_margin_top: 13 privacy.clearOnShutdown.passwords: false privacy.donottrackheader.enabled: true privacy.sanitize.migrateClearSavedPwdsOnExit: true privacy.sanitize.migrateFx3Prefs: true privacy.trackingprotection.enabled: true privacy.trackingprotection.introCount: 20 security.sandbox.content.tempDirSuffix: {35e491d1-8a8b-9b44-a36e-5aa6b1604438} services.sync.declinedEngines: services.sync.engine.addresses.available: true services.sync.engine.bookmarks.validation.lastTime: 1510159028 services.sync.engine.creditcards.available: true services.sync.engine.greasemonkey: true services.sync.engine.prefs.modified: false services.sync.lastPing: 1510159019 services.sync.lastSync: Wed Nov 08 2017 20:51:32 GMT+0000 (GMT) services.sync.numClients: 3 storage.vacuum.last.index: 1 storage.vacuum.last.places.sqlite: 1508326699 Important Locked Preferences ---------------------------- Places Database --------------- JavaScript ---------- Incremental GC: true Accessibility ------------- Activated: false Prevent Accessibility: 0 Library Versions ---------------- NSPR Expected minimum version: 4.17 Version in use: 4.17 NSS Expected minimum version: 3.35 Beta Version in use: 3.35 Beta NSSSMIME Expected minimum version: 3.35 Beta Version in use: 3.35 Beta NSSSSL Expected minimum version: 3.35 Beta Version in use: 3.35 Beta NSSUTIL Expected minimum version: 3.35 Beta Version in use: 3.35 Beta Experimental Features --------------------- Sandbox ------- Content Process Sandbox Level: 3 Effective Content Process Sandbox Level: 3
Sorry if this was raised in the wrong area.
Doesn't seem to happen for me. Have you tried a fresh profile? Could you post a screen capture to show what you're seeing?
Flags: needinfo?(dburns)
Attached image twitter_flashing.jpg
This is really weird... In a fresh profile I can't reproduce but when I disable all my addons and restart it is still creating the issue. I am also seeing weird rendering issues in IRCCloud where I mouse over items and the text disappears
Flags: needinfo?(dburns)
Looking at your prefs, might it be related to layout.display-list.retain: true? Try resetting that...
Resetting that and restarting the browser has fixed this for me. The text is no longer flashing
OK, sounds like this is a Web Painting issue then, rather than Text. Moving...
Component: Layout: Text → Layout: Web Painting
Summary: When typing a tweet text being typed blinks → When typing a tweet text being typed blinks [with retained display-list]
Assignee: nobody → matt.woodrow
Attached patch bug1415672Splinter Review
We only want to set mInInvalidSubtree when we're marking the current frame as invalid (and we've already passed the point that should do it for us). We don't want to set it when calling from RetainedDisplayListBuilder (when we detect caret changes), since that'll make everything invalid, but we haven't setup the rebuild region for that.
Attachment #8927073 - Flags: review?(mikokm)
Comment on attachment 8927073 [details] [diff] [review] bug1415672 Review of attachment 8927073 [details] [diff] [review]: ----------------------------------------------------------------- LGTM with a nicer commit message.
Attachment #8927073 - Flags: review?(mikokm) → review+
Blocks: 1352499
Status: NEW → ASSIGNED
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/7129e7f79826 Don't invalidate the entire frame tree when we're marking a specific frame as being modified. r=miko
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
I have re-tested this issue with the latest Nightly 59.0a1 from 2017-11-13 on Windows 10 x64, Windows 7 x86, Ubuntu 16.04 x64 and Mac OS X 10.13 and I`m no longer able to reproduce it.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: