Bug 1415672 - Don't invalidate the entire frame tree when we're marking a specific frame as being modified. r=miko

--HG--
extra : rebase_source : 7ec5936718e52803bcdf6f1edf435b8247c5107d